--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
     </div>
     <div class="row">
         <div class="col-md-3 sidebar">
-            <div class="parameters">
+            <div class="menu">
+                <ul class="nav nav-stacked">
+                    <li class="tab" data-tab="0"><a href="javascript:void(0)">Prediction</a></li>
+                    <li class="tab" data-tab="1"><a href="javascript:void(0)">GHG Emissions 1990-2015</a></li>
+                    <li class="tab" data-tab="2"><a href="javascript:void(0)">Preserved1</a></li>
+                    <li class="tab" data-tab="3"><a href="javascript:void(0)">Preserved2</a></li>
+                </ul>
+            </div>
+            <!--    <div class="parameters">
                 <input type="text" id="apartments">
                 <label for="">APARTMENTS</label>
                 <input type="text" id="area">
                 <label for="">m²/APARTMENT</label>
-            </div>
+            </div> -->
             <!--  <div class="menu">
                 <span>MENU</span>
                 <ul class="nav nav-pills nav-stacked">
@@ -42,20 +50,35 @@
                 </ul>
             </div> -->
         </div>
-        <div class="col-md-6 content">
+        <div class="col-md-9 content">
             <div class="row">
-                <div class="graph" id="graph_container" style="width: 600px; height: 450px;"></div>
-            </div>
-        </div>
-        <div class="col-md-3 analysis" id="graph_analysis">
-            <div class="delta">
-                <div class="flip-container">
-                    <div class="flipper">
-                        <div class="front">
-                            <p><span id="delta">100</span>/m²</p>
+                <div class="page page-0" data-page="0">
+                    <div class="col-md-8">
+                        <div class="graph" id="graph_container_0" style="width: 600px; height: 450px;"></div>
+                    </div>
+                    <div class="col-md-4 analysis" id="graph_analysis">
+                        <div class="delta">
+                            <div class="flip-container">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <p><span id="delta">100</span>/m²</p>
+                                    </div>
+                                    <div class="back">
+                                        <p><span id="num">5</span>
+                                            <br>Elephants!</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="back">
-                            <p><span id="num">5</span><br>Elephants!</p>
+                    </div>
+                </div>
+                <div class="page page-1 hide" data-page="1">
+                    <div class="col-md-7">
+                        <div class="graph" id="graph_container_1" style="width: 100%; height: 500px;">
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="graph" id="graph_container_1_pie" style="width: 100%; height: 500px;">
                         </div>
                     </div>
                 </div>
