Bug Fix: 饼图五个类目修正为六个类目; Modified: 坐标轴等细节修改

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="menu">
                 <ul class="nav nav-stacked">
                     <li class="tab" data-tab="0"><a href="javascript:void(0)">Prediction</a></li>
-                    <li class="tab" data-tab="1"><a href="javascript:void(0)">GHG Emissions 1990-2015</a></li>
+                    <li class="tab" data-tab="1"><a href="javascript:void(0)">GHG Emissions</a></li>
                     <li class="tab" data-tab="2"><a href="javascript:void(0)">Preserved1</a></li>
                     <li class="tab" data-tab="3"><a href="javascript:void(0)">Preserved2</a></li>
                 </ul>
@@ -57,11 +57,14 @@
                         <div class="graph" id="graph_container_0" style="width: 600px; height: 450px;"></div>
                     </div>
                     <div class="col-md-4 analysis" id="graph_analysis">
+                    	<div class="title">
+                    		<p>Accumulated Reduction <br>of GHG Emissions</p>
+                    	</div>
                         <div class="delta">
                             <div class="flip-container">
                                 <div class="flipper">
                                     <div class="front">
-                                        <p><span id="delta">100</span>/m²</p>
+                                        <p><span id="delta">100</span>/t</p>
                                     </div>
                                     <div class="back">
                                         <p><span id="num">5</span>
