--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
                         <div class="graph" id="graph_container_0" style="width: 600px; height: 450px;"></div>
                     </div>
                     <div class="col-md-4 analysis" id="graph_analysis">
-                    	<div class="title">
-                    		<p>Accumulated Reduction <br>of GHG Emissions</p>
-                    	</div>
+                        <div class="title">
+                            <p>Accumulated Reduction
+                                <br>of GHG Emissions</p>
+                        </div>
                         <div class="delta">
                             <div class="flip-container">
                                 <div class="flipper">
@@ -77,11 +78,24 @@
                 </div>
                 <div class="page page-1 hide" data-page="1">
                     <div class="col-md-7">
-                        <div class="graph" id="graph_container_1" style="width: 100%; height: 500px;">
+                        <div class="graph" id="graph_container_1" style="width: 100%; height: 300px;">
+                        </div>
+                        <div class="row forest-rate">
+                            <div class="rate-control">
+                            <span>growth rate:</span>
+                                <div class="btn" id="btn_minus">-</div>
+                                <div class="input-rate">
+                                    <input type="text" id="input_rate">
+                                </div>
+                                <div class="btn" id="btn_plus">+</div>
+                            </div>
+                            <div class="rate-graph">
+                                <div class="graph" id="graph_container_1_forest" style="width: 100%; height: 250px;"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-5">
-                        <div class="graph" id="graph_container_1_pie" style="width: 100%; height: 500px;">
+                        <div class="graph" id="graph_container_1_pie" style="width: 100%; height: 300px;">
                         </div>
                     </div>
                 </div>
