--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div class="col-md-3 sidebar">
             <div class="menu">
                 <ul class="nav nav-stacked">
-                    <li class="tab" data-tab="0"><a href="javascript:void(0)">Prediction</a></li>
                     <li class="tab" data-tab="1"><a href="javascript:void(0)">GHG Emissions</a></li>
-                    <li class="tab" data-tab="2"><a href="javascript:void(0)">Preserved1</a></li>
-                    <li class="tab" data-tab="3"><a href="javascript:void(0)">Preserved2</a></li>
+                    <li class="tab" data-tab="0"><a href="javascript:void(0)">Prediction</a></li>
+                    <!-- <li class="tab" data-tab="2"><a href="javascript:void(0)">Preserved1</a></li> -->
+                    <!-- <li class="tab" data-tab="3"><a href="javascript:void(0)">Preserved2</a></li> -->
                 </ul>
             </div>
             <!--    <div class="parameters">
@@ -52,11 +52,15 @@
         </div>
         <div class="col-md-9 content">
             <div class="row">
-                <div class="page page-0" data-page="0">
+                <div class="page page-0 hide" data-page="0">
                     <div class="col-md-8">
                         <div class="graph" id="graph_container_0" style="width: 600px; height: 450px;"></div>
                     </div>
                     <div class="col-md-4 analysis" id="graph_analysis">
+                        <div class="apartments">
+                            <input type="text">
+                            <label for="">Apartments</label>
+                        </div>
                         <div class="title">
                             <p>Accumulated Reduction
                                 <br>of GHG Emissions</p>
@@ -65,24 +69,24 @@
                             <div class="flip-container">
                                 <div class="flipper">
                                     <div class="front">
-                                        <p><span id="delta">100</span>/t</p>
+                                        <p><span id="delta">100</span>ton</p>
                                     </div>
                                     <div class="back">
-                                        <p><span id="num">5</span>
-                                            <br>Elephants!</p>
+                                        <p><span class="num" id="num">&nbsp;</span>
+                                            <br><span class="description" id="description">&nbsp;</span></p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="page page-1 hide" data-page="1">
+                <div class="page page-1 " data-page="1">
                     <div class="col-md-7">
                         <div class="graph" id="graph_container_1" style="width: 100%; height: 300px;">
                         </div>
                         <div class="row forest-rate">
                             <div class="rate-control">
-                            <span>growth rate:</span>
+                                <span>growth rate:</span>
                                 <div class="btn" id="btn_minus">-</div>
                                 <div class="input-rate">
                                     <input type="text" id="input_rate">
