Modified: piechart title

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </div>
                         <div class="title">
                             <p>Accumulated Reduction
-                                <br>of GHG Emissions</p>
+                                <br>of GHG Emissions in year <span id="pie_year"></span></p>
                         </div>
                         <div class="delta">
                             <div class="flip-container">
