Fix: fix bug in switching pages

--- a/index.html
+++ b/index.html
@@ -22,33 +22,9 @@
                 <ul class="nav nav-stacked">
                     <li class="tab" data-tab="1"><a href="javascript:void(0)">GHG Emissions</a></li>
                     <li class="tab" data-tab="0"><a href="javascript:void(0)">Prediction</a></li>
-                    <!-- <li class="tab" data-tab="2"><a href="javascript:void(0)">Preserved1</a></li> -->
-                    <!-- <li class="tab" data-tab="3"><a href="javascript:void(0)">Preserved2</a></li> -->
                 </ul>
             </div>
-            <!--    <div class="parameters">
-                <input type="text" id="apartments">
-                <label for="">APARTMENTS</label>
-                <input type="text" id="area">
-                <label for="">m²/APARTMENT</label>
-            </div> -->
-            <!--  <div class="menu">
-                <span>MENU</span>
-                <ul class="nav nav-pills nav-stacked">
-                    <li class="pure-menu-item">
-                        <a href="javascript:void(0)" class="pure-menu-link" data-tab="0">chart1</a>
-                    </li>
-                    <li class="pure-menu-item">
-                        <a href="javascript:void(0)" class="pure-menu-link" data-tab="1">chart2</a>
-                    </li>
-                    <li class="pure-menu-item">
-                        <a href="javascript:void(0)" class="pure-menu-link" data-tab="2">chart3</a>
-                    </li>
-                    <li class="pure-menu-item">
-                        <a href="javascript:void(0)" class="pure-menu-link" data-tab="3">chart4</a>
-                    </li>
-                </ul>
-            </div> -->
+            
         </div>
         <div class="col-md-9 content">
             <div class="row">
@@ -63,7 +39,7 @@
                         </div>
                         <div class="title">
                             <p>Accumulated Reduction
-                                <br>of GHG Emissions in year <span id="pie_year"></span></p>
+                                <br>of GHG Emissions </p>
                         </div>
                         <div class="delta">
                             <div class="flip-container">
